--- a/src/main/resources/com/example/mytool/add-message-modal.fxml
+++ b/src/main/resources/com/example/mytool/add-message-modal.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import org.fxmisc.richtext.CodeArea?>
 
-<AnchorPane prefHeight="489.0" prefWidth="695.0" xmlns="http://javafx.com/javafx/21.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.ui.controller.AddOrViewMessageModalController">
+<AnchorPane prefHeight="489.0" prefWidth="695.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.ui.controller.AddOrViewMessageModalController">
     <children>
       <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="498.0" prefWidth="687.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
