--- a/src/main/resources/com/example/mytool/add-message-modal.fxml
+++ b/src/main/resources/com/example/mytool/add-message-modal.fxml
@@ -17,8 +17,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import org.fxmisc.richtext.CodeArea?>
+<?import org.fxmisc.flowless.VirtualizedScrollPane?>
 
-<AnchorPane prefHeight="489.0" prefWidth="695.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.ui.controller.AddOrViewMessageModalController">
+<AnchorPane prefHeight="489.0" prefWidth="695.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.ui.controller.AddOrViewMessageModalController">
     <children>
       <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="498.0" prefWidth="687.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -49,21 +50,31 @@
                                        <GridPane.margin>
                                           <Insets right="5.0" />
                                        </GridPane.margin></TextArea>
-                                              <CodeArea fx:id="valueTextArea" prefHeight="108.0" prefWidth="520.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1"
-                                             style="-fx-border-color: lightgray lightgray lightgray lightgray; -fx-background-color: -color-bg-default;" >
-<!--                                                styleClass="text-input"  -->
+<!--                                     <AnchorPane GridPane.columnIndex="1" GridPane.rowIndex="1"> -->
+                                        <VirtualizedScrollPane  GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                           <GridPane.margin>
+                                              <Insets right="5.0" />
+                                           </GridPane.margin>
+                                          <content>
+                                                    <CodeArea fx:id="valueTextArea" prefHeight="118.0" prefWidth="552.0" style="-fx-border-color: lightgray lightgray lightgray lightgray; -fx-background-color: -color-bg-default;" wrapText="true" />
+                                        </content>
 
-                                       <GridPane.margin>
-                                          <Insets right="5.0" />
-                                       </GridPane.margin></CodeArea>
+                                        </VirtualizedScrollPane>
+<!--                                     </AnchorPane> -->
 <!--                                     <TextArea fx:id="schemaTextArea" layoutX="59.0" layoutY="69.0" prefHeight="108.0" prefWidth="520.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="2" /> -->
-                                    <CodeArea fx:id="schemaTextArea" layoutX="59.0" layoutY="69.0" prefHeight="130.0" prefWidth="551.0"   wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="3"
-                                    style="-fx-border-color: lightgray lightgray lightgray lightgray; -fx-background-color: -color-bg-default;" >
+                                    <VirtualizedScrollPane  GridPane.columnIndex="1" GridPane.rowIndex="3">
+                                    <GridPane.margin>
+                                                                              <Insets right="5.0" />
+                                                                           </GridPane.margin>
+                                                                           <content>
+<!--                                                                            layoutX="59.0" layoutY="69.0" -->
+                                    <CodeArea fx:id="schemaTextArea"  prefHeight="130.0" prefWidth="551.0" style="-fx-border-color: lightgray lightgray lightgray lightgray; -fx-background-color: -color-bg-default;" wrapText="true" >
 <!--                                    styleClass="text-input"    -->
 
-                                       <GridPane.margin>
-                                          <Insets right="5.0" />
-                                       </GridPane.margin></CodeArea>
+                                       </CodeArea>
+                                        </content>
+
+                                                                               </VirtualizedScrollPane>
                                     <Label layoutX="10.0" layoutY="114.0" text="Value Schema" GridPane.rowIndex="3">
                                        <GridPane.margin>
                                           <Insets left="10.0" />
