--- a/src/main/resources/com/example/mytool/main-view.fxml
+++ b/src/main/resources/com/example/mytool/main-view.fxml
@@ -14,7 +14,6 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.control.TreeView?>
@@ -25,8 +24,8 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
-<?import org.fxmisc.richtext.CodeArea?>
 <?import org.fxmisc.flowless.VirtualizedScrollPane?>
+<?import org.fxmisc.richtext.CodeArea?>
 
 <AnchorPane prefHeight="661.0" prefWidth="1397.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.ui.controller.MainController">
    <children>
@@ -138,6 +137,16 @@
                                                                               <Insets left="10.0" top="5.0" />
                                                                           </FlowPane.margin>
                                                                       </Label>
+                                                      <Label text="Filter">
+                                                         <FlowPane.margin>
+                                                            <Insets left="10.0" top="5.0" />
+                                                         </FlowPane.margin>
+                                                      </Label>
+                                                      <TextField fx:id="filterMsgTextField" promptText="Enter a filter">
+                                                         <FlowPane.margin>
+                                                            <Insets left="10.0" top="5.0" />
+                                                         </FlowPane.margin>
+                                                      </TextField>
                                                                   </children>
                                                               </FlowPane>
                                                           </children>
@@ -169,8 +178,7 @@
                                                       <VirtualizedScrollPane>
                                                           <HBox.margin><Insets right="5.0" /></HBox.margin>
                                                           <content>
-                                                             <CodeArea fx:id="schemaTextArea" disable="true" prefHeight="93.0" prefWidth="388.0" wrapText="true"
-                                                             style="-fx-border-color: lightgray lightgray lightgray lightgray; -fx-background-color: -color-bg-default;">
+                                                             <CodeArea fx:id="schemaTextArea" disable="true" prefHeight="93.0" prefWidth="388.0" style="-fx-border-color: lightgray lightgray lightgray lightgray; -fx-background-color: -color-bg-default;" wrapText="true">
                                                                          </CodeArea>
                                                           </content>
                                                       </VirtualizedScrollPane>
@@ -206,7 +214,7 @@
                                         </AnchorPane>
                                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                          <children>
-                                             <VirtualizedScrollPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" >
+                                             <VirtualizedScrollPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                 <content>
                                                     <CodeArea fx:id="schemaRegistryTextArea" editable="false" prefHeight="318.0" prefWidth="934.0" style="-fx-border-color: lightgray lightgray lightgray lightgray; -fx-background-color: -color-bg-default;" wrapText="true" />
                                                 </content>
