--- a/src/main/resources/com/example/mytool/main-view.fxml
+++ b/src/main/resources/com/example/mytool/main-view.fxml
@@ -128,7 +128,7 @@
                                                                           </FlowPane.margin>
                                                                       </DateTimePicker>
                                                       <Label text="Before" />
-                                                      <DateTimePicker prefWidth="180.0" />
+                                                      <DateTimePicker disable="true" prefWidth="180.0" />
                                                                       <Button fx:id="countMessagesBtn" mnemonicParsing="false" onAction="#countMessages" text="Count Msgs">
                                                                           <FlowPane.margin>
                                                                               <Insets left="10.0" top="5.0" />
