--- a/src/main/resources/com/example/mytool/add-connection-modal.fxml
+++ b/src/main/resources/com/example/mytool/add-connection-modal.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.ui.controller.AddConnectionModalController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.ui.controller.AddConnectionModalController">
     <children>
         <TabPane layoutX="23.0" layoutY="8.0" prefHeight="375.0" prefWidth="569.0" tabClosingPolicy="UNAVAILABLE">
             <tabs>
@@ -28,6 +29,7 @@
                                         <RowConstraints maxHeight="104.0" minHeight="45.0" prefHeight="45.0" vgrow="SOMETIMES" />
                                         <RowConstraints maxHeight="211.0" minHeight="45.0" prefHeight="45.0" vgrow="SOMETIMES" />
                               <RowConstraints maxHeight="211.0" minHeight="45.0" prefHeight="45.0" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="211.0" minHeight="45.0" prefHeight="45.0" vgrow="SOMETIMES" />
                                         <RowConstraints maxHeight="267.0" minHeight="10.0" prefHeight="208.0" vgrow="SOMETIMES" />
                                     </rowConstraints>
                                     <children>
@@ -35,7 +37,7 @@
                                         <TextField fx:id="clusterNameTextField" GridPane.columnIndex="1" />
                                         <Label text="Bootstrap Server" GridPane.rowIndex="1" />
                                         <TextField fx:id="bootstrapServerTextField" prefHeight="4.0" prefWidth="477.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                                             <children>
                                                 <Button fx:id="addBtn" mnemonicParsing="false" onAction="#add" text="OK" />
                                                 <Button fx:id="cancelBtn" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
@@ -43,6 +45,7 @@
                                         </HBox>
                               <Label prefHeight="17.0" prefWidth="102.0" text="Schema Registry" GridPane.rowIndex="2" />
                               <TextField fx:id="schemaRegistryTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <CheckBox fx:id="isOnlySubjectLoadedCheckBox" mnemonicParsing="false" text="Load subject names only from Schema Registry" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                     </children>
                                 </GridPane>
                             </children>
