refactor message header table to use new class MessageHeaderTable which extends EditableTableControl

--- a/src/main/resources/com/example/mytool/editable-table.fxml
+++ b/src/main/resources/com/example/mytool/editable-table.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.Tooltip?>
 
 <!-- fx:controller="com.example.mytool.ui.control.EditableTableControl" -->
 
@@ -34,7 +34,7 @@
                               <Insets left="10.0" top="5.0" />
                            </HBox.margin>
                         </Button>
-                        <Button fx:id="removeItemBtn" mnemonicParsing="false" onAction="#removeItem" text="-">
+                        <Button fx:id="removeItemsBtn" mnemonicParsing="false" onAction="#removeItems" text="-">
                            <HBox.margin>
                               <Insets left="10.0" top="5.0" />
                            </HBox.margin>
@@ -55,7 +55,7 @@
                                  <HBox.margin>
                                     <Insets left="10.0" />
                                  </HBox.margin>
-                                 <tooltip> <Tooltip text="Regex"/> </tooltip>
+                                 <tooltip> <Tooltip text="Regex" /> </tooltip>
                               </ToggleButton>
                            </children>
                            <HBox.margin>
