--- a/src/main/resources/com/example/mytool/main-view.fxml
+++ b/src/main/resources/com/example/mytool/main-view.fxml
@@ -27,7 +27,7 @@
 <?import org.fxmisc.flowless.VirtualizedScrollPane?>
 <?import org.fxmisc.richtext.CodeArea?>
 
-<AnchorPane prefHeight="661.0" prefWidth="1397.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.ui.controller.MainController">
+<AnchorPane prefHeight="661.0" prefWidth="1418.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.ui.controller.MainController">
    <children>
       <SplitPane dividerPositions="0.29069767441860467" prefHeight="614.0" prefWidth="1271.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="0.0">
           <items>
@@ -106,13 +106,16 @@
                                                                               <Insets top="5.0" />
                                                                           </FlowPane.margin>
                                                                       </TextField>
-                                                                      <Label text="No Msgs/Partition Displayed">
+                                                                      <Label text="No Msgs/Partition To Poll">
                                                                           <FlowPane.margin>
                                                                               <Insets left="10.0" top="5.0" />
                                                                           </FlowPane.margin>
                                                                       </Label>
-                                                      <ComboBox fx:id="msgPosition" promptText="LAST" />
-                                                                      <TextField fx:id="maxMessagesTextField" prefHeight="26.0" prefWidth="60.0" text="1000">
+                                                      <ComboBox fx:id="msgPosition" promptText="LAST">
+                                                         <FlowPane.margin>
+                                                            <Insets left="5.0" />
+                                                         </FlowPane.margin></ComboBox>
+                                                                      <TextField fx:id="maxMessagesTextField" prefHeight="26.0" prefWidth="72.0" text="1000">
                                                                           <FlowPane.margin>
                                                                               <Insets left="10.0" />
                                                                           </FlowPane.margin>
