--- a/src/main/resources/io/github/nhtuan10/mykafkatool/add-message-modal.fxml
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/add-message-modal.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import io.github.nhtuan10.mykafkatool.ui.control.MessageHeaderTable?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -7,8 +8,6 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -16,11 +15,10 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import org.fxmisc.richtext.CodeArea?>
 <?import org.fxmisc.flowless.VirtualizedScrollPane?>
-<?import io.github.nhtuan10.mykafkatool.ui.control.MessageHeaderTable?>
+<?import org.fxmisc.richtext.CodeArea?>
 
-<AnchorPane prefHeight="489.0" prefWidth="695.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.nhtuan10.mykafkatool.ui.controller.AddOrViewMessageModalController">
+<AnchorPane prefHeight="522.0" prefWidth="738.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.nhtuan10.mykafkatool.ui.controller.AddOrViewMessageModalController">
     <children>
       <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="498.0" prefWidth="687.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -30,17 +28,16 @@
                           <content>
                               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                   <children>
-                                      <GridPane layoutY="12.0" prefHeight="398.0" prefWidth="685.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="12.0">
+                                      <GridPane layoutY="12.0" prefHeight="429.0" prefWidth="736.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="12.0">
                                           <columnConstraints>
                                               <ColumnConstraints hgrow="SOMETIMES" maxWidth="280.0" minWidth="10.0" prefWidth="86.0" />
-                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="556.0" minWidth="10.0" prefWidth="556.0" />
+                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="556.0" minWidth="10.0" percentWidth="80.0" prefWidth="556.0" />
                                           </columnConstraints>
                                           <rowConstraints>
-                                              <RowConstraints maxHeight="104.0" minHeight="0.0" prefHeight="54.0" vgrow="SOMETIMES" />
-                                              <RowConstraints maxHeight="216.0" minHeight="10.0" prefHeight="118.0" vgrow="SOMETIMES" />
-                                    <RowConstraints maxHeight="216.0" minHeight="10.0" prefHeight="21.0" vgrow="SOMETIMES" />
-                                    <RowConstraints maxHeight="178.0" minHeight="10.0" prefHeight="129.0" vgrow="SOMETIMES" />
-                                              <RowConstraints maxHeight="129.0" minHeight="9.0" prefHeight="34.0" vgrow="SOMETIMES" />
+                                              <RowConstraints maxHeight="104.0" minHeight="0.0" percentHeight="10.0" prefHeight="54.0" vgrow="SOMETIMES" />
+                                              <RowConstraints maxHeight="216.0" minHeight="10.0" percentHeight="60.0" prefHeight="118.0" vgrow="SOMETIMES" />
+                                    <RowConstraints maxHeight="178.0" minHeight="10.0" percentHeight="25.0" prefHeight="129.0" vgrow="SOMETIMES" />
+                                              <RowConstraints maxHeight="129.0" minHeight="9.0" percentHeight="5.0" prefHeight="34.0" vgrow="SOMETIMES" />
                                           </rowConstraints>
                                           <children>
                                               <Label text="Key">
@@ -52,7 +49,7 @@
                                           <Insets right="5.0" />
                                        </GridPane.margin></TextArea>
 <!--                                     <AnchorPane GridPane.columnIndex="1" GridPane.rowIndex="1"> -->
-                                        <VirtualizedScrollPane  GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                        <VirtualizedScrollPane GridPane.columnIndex="1" GridPane.rowIndex="1">
                                            <GridPane.margin>
                                               <Insets right="5.0" />
                                            </GridPane.margin>
@@ -63,28 +60,28 @@
                                         </VirtualizedScrollPane>
 <!--                                     </AnchorPane> -->
 <!--                                     <TextArea fx:id="schemaTextArea" layoutX="59.0" layoutY="69.0" prefHeight="108.0" prefWidth="520.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="2" /> -->
-                                    <VirtualizedScrollPane  GridPane.columnIndex="1" GridPane.rowIndex="3">
+                                    <VirtualizedScrollPane GridPane.columnIndex="1" GridPane.rowIndex="2">
                                     <GridPane.margin>
                                                                               <Insets right="5.0" />
                                                                            </GridPane.margin>
                                                                            <content>
 <!--                                                                            layoutX="59.0" layoutY="69.0" -->
-                                    <CodeArea fx:id="schemaTextArea"  prefHeight="130.0" prefWidth="551.0" style="-fx-border-color: lightgray lightgray lightgray lightgray; -fx-background-color: -color-bg-default;" wrapText="true" >
+                                    <CodeArea fx:id="schemaTextArea" prefHeight="130.0" prefWidth="551.0" style="-fx-border-color: lightgray lightgray lightgray lightgray; -fx-background-color: -color-bg-default;" wrapText="true">
 <!--                                    styleClass="text-input"    -->
 
                                        </CodeArea>
                                         </content>
 
                                                                                </VirtualizedScrollPane>
-                                    <Label layoutX="10.0" layoutY="114.0" text="Value Schema" GridPane.rowIndex="3">
+                                    <Label layoutX="10.0" layoutY="114.0" text="Value Schema" GridPane.rowIndex="2">
                                        <GridPane.margin>
                                           <Insets left="10.0" />
                                        </GridPane.margin></Label>
-                                    <Label text="Value Type" GridPane.rowIndex="4">
+                                    <Label text="Value Type" GridPane.rowIndex="3">
                                        <GridPane.margin>
                                           <Insets left="10.0" />
                                        </GridPane.margin></Label>
-                                    <ComboBox fx:id="valueContentTypeComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                    <ComboBox fx:id="valueContentTypeComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                     <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
                                        <children>
                                                     <Label text="Value">
