--- a/src/main/resources/io/github/nhtuan10/mykafkatool/main-view.fxml
+++ b/src/main/resources/io/github/nhtuan10/mykafkatool/main-view.fxml
@@ -16,6 +16,8 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.control.TreeView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -147,7 +149,19 @@
                                                             <Insets left="10.0" top="5.0" />
                                                          </FlowPane.margin>
                                                       </TextField>
-                                                                      <Label fx:id="noMessagesLabel" text="0 Messages" />
+                                                      <ToggleButton fx:id="regexFilterToggleBtn" mnemonicParsing="false" text=".*">
+                                                         <tooltip>
+                                                            <Tooltip text="Regex" />
+                                                         </tooltip>
+                                                         <FlowPane.margin>
+                                                            <Insets left="10.0" top="5.0" />
+                                                         </FlowPane.margin>
+                                                      </ToggleButton>
+                                                                      <Label fx:id="noMessagesLabel" text="0 Messages">
+                                                         <FlowPane.margin>
+                                                            <Insets left="10.0" top="5.0" />
+                                                         </FlowPane.margin>
+                                                                      </Label>
                                                                   </children>
                                                               </FlowPane>
                                                           </children>
